--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {},
