--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "jquery-nav-scroll": "^1.4.1",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {},
