--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "active-scroll": "^1.0.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "jquery-nav-scroll": "^1.4.1",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {},
